Back to top button visibility and position Issue #98

--- a/style.css
+++ b/style.css
@@ -68,8 +68,7 @@ body {
 }
 
 .nav-btn:hover {
-  background: #1d9660 radial-gradient(circle, transparent 1%, #1d9660 1%)
-    center/15000%;
+  background: #1d9660 radial-gradient(circle, transparent 1%, #1d9660 1%) center/15000%;
 }
 
 .nav-link:hover {
@@ -133,8 +132,7 @@ body {
 }
 
 .get-btn:hover {
-  background: #2b9b6a radial-gradient(circle, transparent 1%, #2b9b6a 1%)
-    center/15000%;
+  background: #2b9b6a radial-gradient(circle, transparent 1%, #2b9b6a 1%) center/15000%;
 }
 
 .get-btn:active {
@@ -158,9 +156,6 @@ body {
   font-weight: bold;
 }
 
-.gotopbtn:hover {
-  background-color: #5bb18a;
-}
 
 /* Cards section */
 
@@ -262,8 +257,7 @@ body {
 }
 
 .buy-btn:hover {
-  background: #1d9660 radial-gradient(circle, transparent 1%, #1d9660 1%)
-    center/15000%;
+  background: #1d9660 radial-gradient(circle, transparent 1%, #1d9660 1%) center/15000%;
 }
 
 .buy-btn:active {
@@ -558,31 +552,40 @@ body {
     padding-bottom: 50px;
     padding-top: 0;
   }
+
   .header-details {
     padding-top: 120px;
   }
+
   .cards-inner {
     margin-bottom: 20px;
   }
+
   .video-details {
     margin-bottom: 50px;
   }
+
   .testimonial-inner {
     text-align: center;
   }
+
   .testimonial-inner p {
     margin-left: 0;
   }
+
   .footer-section .container .row .col-lg-5 {
     padding-top: 5px;
     padding-left: 15px;
   }
+
   .footer-section .container .row .col-lg-3 {
     padding-left: 15px;
   }
+
   .footer-list-item ul {
     margin-bottom: 20px;
   }
+
   .nav-btn {
     width: 24%;
     height: 15%;
@@ -595,16 +598,20 @@ body {
   .card-deck {
     display: block !important;
   }
+
   .card {
     margin-bottom: 30px !important;
   }
+
   .footer-section .container .row .col-lg-5 {
     padding-top: 5px;
     padding-left: 15px;
   }
+
   .footer-section .container .row .col-lg-3 {
     padding-left: 15px;
   }
+
   .footer-list-item ul {
     margin-bottom: 20px;
   }
@@ -616,6 +623,7 @@ body {
     line-height: 65px;
     margin-bottom: 15px;
   }
+
   .footer-list-item ul li {
     font-size: 14px;
     line-height: 26px;
@@ -628,16 +636,19 @@ body {
     width: 45px;
     margin: 5px;
   }
+
   .social-icons li a {
     line-height: 45px;
     font-size: 25px;
   }
+
   .social-icons li.shadow a {
     height: 30px;
     width: 30px;
     line-height: 30px;
     font-size: 22px;
   }
+
   .nav-btn {
     width: 32%;
     height: 15%;
@@ -652,16 +663,19 @@ body {
     width: 40px;
     margin: 3px;
   }
+
   .social-icons li a {
     line-height: 40px;
     font-size: 20px;
   }
+
   .social-icons li.shadow a {
     height: 25px;
     width: 25px;
     line-height: 25px;
     font-size: 20px;
   }
+
   .nav-btn {
     padding: 10px 28px !important;
     background-color: #21b573;
@@ -669,14 +683,16 @@ body {
     border: none;
     border-radius: 33px;
   }
+
   .nav-btn {
     background-position: center;
     transition: background 0.8s;
   }
+
   .nav-btn:hover {
-    background: #1d9660 radial-gradient(circle, transparent 1%, #1d9660 1%)
-      center/15000%;
+    background: #1d9660 radial-gradient(circle, transparent 1%, #1d9660 1%) center/15000%;
   }
+
   .nav-link:hover {
     transform: scale(1.05);
     transition: 0.5s all ease-in-out;
@@ -685,37 +701,22 @@ body {
 }
 
 /*Back to top button */
-
-.gotopbtn {
+.back-to-top {
+  padding: 15px 20px;
+  background-color: #1d9660;
   position: fixed;
-  width: 50px;
-  height: 50px;
-  background: #27ae60;
-  right: 50px;
-  text-decoration: none;
-  text-align: center;
-  line-height: 50px;
-  color: white;
-  font-size: 22px;
+  display: none;
+  z-index: 2500;
+  bottom: 20px;
+  right: 20px;
   border-radius: 50%;
-  margin-right: 40px;
+  border: none;
 }
 
-.gotopbtn {
-  background-position: center;
-  transition: background 0.8s;
+.back-to-top:focus {
+  outline: none;
 }
 
-.gotopbtn:hover {
-  background: #1d9660 radial-gradient(circle, transparent 1%, #1d9660 1%)
-    center/15000%;
-}
-
-.gotopbtn:active {
-  background-color: white;
-  background-size: 100%;
-  transition: background 0s;
-}
 
 .fas {
   text-decoration: none;
@@ -818,6 +819,7 @@ body {
 .darkmode-toggle {
   z-index: 1031;
 }
+
 .nav-link {
   display: flex;
   width: 101px;
